syntax = "proto3";
package dhpc.request;

option go_package = "github.com/DhpcChain/Dhpc/x/request/types";
import "dhpc/request/miner_response.proto"; 

message RequestRecord {
  string uUID = 1; 
  string tXhash = 2; 
  string network = 3; 
  string from = 4; 
  string address = 5; 
  int32 score = 6; 
  string oracle = 7; 
  int64 block = 8; 
  int32 stage = 9; 
  repeated MinerResponse miners = 10; 
  string creator = 11;
  int64 createdBlock = 12;
  int64 updatedBlock = 13;
}

